--- a/index.html
+++ b/index.html
@@ -154,14 +154,16 @@
                 <div class="col-lg-4 mx-auto mbr-form" data-form-type="formoid">
                     <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler"
                         data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true"
-                            value="7WDwl8996tgOEr+HXMW2SYPKpQ2JlhZScNEmAklAJPYR5KqAKUsTVQCE+BbsbFYoPDZSTguw10HD3D7RCeXrN/JSs5ZDyTcEMjvtnxwewq4x6mDRPbs90hJXM6vIVc6X">
+                            value="Jwqc6v0pJGSGUpD9JFHqMNHsj0caH+tezvfjJnfMhK9q4EmCeT3Mh/CoU9DTFQKo1VuvyXGO7BFWbTcU+54Mq6QiA7u8hZhie/OJ5Yl4zdKSxObtCqL5dcSQtEWLMEpz">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for
                                 filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...!
                                 some problem!</div>
                         </div>
+                        <div class="dragArea row">
 
+                        </div>
                     </form>
                 </div>
             </div>
@@ -177,14 +179,16 @@
             <div class="row justify-content-center">
                 <div class="title col-md-12 col-lg-10">
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
-                        <strong>Codemania</strong>
+                        <strong>Codemania 2023</strong>
                     </h3>
                     <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">¡Bienvenidos al
-                        Concurso Codemania 2023! Este evento desafía a los participantes a poner a prueba sus
-                        habilidades de resolución de problemas y programación en una competencia emocionante. Los
-                        concursantes tendrán la oportunidad de enfrentarse a problemas algorítmicos complejos que
-                        requerirán de su creatividad, pensamiento crítico y conocimiento técnico para encontrar
-                        soluciones eficientes en el menor tiempo posible.&nbsp;</h4>
+                        Concurso Codemania 2023! Originalmente creado por la UACJ como una competencia exclusiva para
+                        sus alumnos, ahora se ha transformado en una versión de categoría abierta para toda la ciudad.
+                        Los participantes podrán poner a prueba sus habilidades de resolución de problemas y
+                        programación en una emocionante competencia, enfrentándose a problemas algorítmicos complejos
+                        que requerirán de su creatividad, pensamiento crítico y conocimiento técnico para encontrar
+                        soluciones eficientes en el menor tiempo posible. ¡No te pierdas la oportunidad de formar parte
+                        del Concurso Codemania 2023 y demostrar tu talento!</h4>
                     <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4"
                             href="https://forms.gle/x2Sod4nFhcHKWgsr6" target="_blank">REGISTRAME</a></div>
                 </div>
@@ -343,6 +347,7 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -390,8 +395,7 @@
             <div class="mbr-section-head">
                 <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>CONFERENCIAS</strong>
                 </h4>
-                <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Images with Title and
-                    Text</h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5"></h5>
             </div>
             <div class="row mt-4">
                 <div class="item features-image сol-12 col-md-6 col-lg-3">
@@ -406,7 +410,8 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">OmegaUp es una plataforma educativa
                                 gratuita que te ayuda a mejorar tus habilidades de programación, usada por decenas de
-                                miles de estudiantes y docentes en Latinoamérica.<br></p>
+                                miles de estudiantes y docentes en Latinoamérica.<br><a href="https://omegaup.com/"
+                                    class="text-primary">https://omegaup.com/</a><br></p>
                         </div>
 
                     </div>
@@ -421,7 +426,10 @@
                             <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
                                 <em>11:00 am - 12:00 pm</em>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
+                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Organización global sin fines de lucro
+                                orientada a desarrollar el liderazgo y pleno potencial humano en jóvenes y lograr la paz
+                                mundial.<br><a href="https://aiesec.org/"
+                                    class="text-primary">https://aiesec.org/</a><br></p>
                         </div>
 
                     </div>
@@ -436,7 +444,7 @@
                             <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
                                 <em>01:00 pm - 02:00 pm</em>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
+                            <p class="mbr-text mbr-fonts-style mt-3 display-7">&nbsp;</p>
                             <p>
                                 &nbsp;&nbsp;&nbsp;&nbsp;</p>
                             <p></p>
