--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                             <img src="assets/images/dah-564x392.webp" alt="Mobirise Website Builder">
                         </div>
                         <div class="item-content">
-                            <h5 class="item-title mbr-fonts-style display-7"><strong>Dahminis</strong></h5>
+                            <h5 class="item-title mbr-fonts-style display-7"><strong>DAH-minis</strong></h5>
 
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Espacios de información donde personas
                                 dedicadas al desarrollo de algoritmos y soluciones computacionales compartirán
