--- a/index.html
+++ b/index.html
@@ -97,35 +97,6 @@
         </div>
     </section>
 
-    <section data-bs-version="5.1" class="features16 cid-txSvgRMbYE" id="features17-d">
-
-
-
-
-        <div class="container">
-            <div class="content-wrapper">
-                <div class="row align-items-center">
-                    <div class="col-12 col-lg-6">
-                        <div class="image-wrapper">
-                            <img src="assets/images/whatsapp-image-2023-03-06-at-2.47.31-pm2-506x336.webp"
-                                alt="Mobirise Website Builder">
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg">
-                        <div class="text-wrapper">
-                            <h6 class="card-title mbr-fonts-style display-5"></h6>
-                            <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                                Con el objetivo de incrementar la formación de actividades de desarrollo tecnológico en
-                                la ciudad, How To Dev se compromete a ser visto como el inicio de una red de
-                                programadores locales donde realizando actividades como capacitaciones, concursos,
-                                eventos y reuniones fortalecerá una comunidad en progreso con vista a la innovación.</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section data-bs-version="5.1" class="countdown1 cid-txLe7vEJvB" id="countdown1-8">
 
@@ -150,24 +121,36 @@
 
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 mx-auto mbr-form" data-form-type="formoid">
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler"
-                        data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true"
-                            value="L12zOn7ow0m94ngwRmcPY2qUFH5KlhmcXKUJIuHMnax42xFsf/Xe7LPSdkphKfYOZ24tq0bcYrHHHV5GnZh88QSBY/Sg9DZ6freZDKSNpRU2BDY6NuVS2VUF4eUSUuqh">
-                        <div class="row">
-                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for
-                                filling out the form!</div>
-                            <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...!
-                                some problem!</div>
-                        </div>
+        </div>
+    </section>
 
-                    </form>
+    <section data-bs-version="5.1" class="features16 cid-txSvgRMbYE" id="features17-d">
+        <div class="container">
+            <div class="content-wrapper">
+                <div class="row align-items-center">
+                    <div class="col-12 col-lg-6">
+                        <div class="image-wrapper">
+                            <img src="assets/images/whatsapp-image-2023-03-06-at-2.47.31-pm2-506x336.webp"
+                                alt="Mobirise Website Builder">
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg">
+                        <div class="text-wrapper">
+                            <h6 class="card-title mbr-fonts-style display-5"></h6>
+                            <p class="mbr-text mbr-fonts-style mb-4 display-4">
+                                Con el objetivo de incrementar la formación de actividades de desarrollo tecnológico
+                                en
+                                la ciudad, How To Dev se compromete a ser visto como el inicio de una red de
+                                programadores locales donde realizando actividades como capacitaciones, concursos,
+                                eventos y reuniones fortalecerá una comunidad en progreso con vista a la innovación.
+                            </p>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section data-bs-version="5.1" class="content4 cid-txLfBfi3NN" id="content4-b">
         <div class="container">
             <div class="row justify-content-center">
@@ -189,20 +172,13 @@
             </div>
         </div>
     </section>
-
     <section data-bs-version="5.1" class="content16 cid-txLfv50rdu" id="content16-a">
-
-
-
-
-
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
                     <div class="mbr-section-head align-center mb-4">
                         <h3 class="mbr-section-title mb-0 mbr-fonts-style display-5"><strong>Bases del concurso</strong>
                         </h3>
-
                     </div>
                     <div id="bootstrap-accordion_4" class="panel-group accordionStyles accordion" role="tablist"
                         aria-multiselectable="true">
@@ -347,7 +323,7 @@
                                     data-bs-toggle="collapse" data-core="" href="#collapse6_4" aria-expanded="false"
                                     aria-controls="collapse6">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7">
-                                        <strong>Premiación&nbsp;</strong>
+                                        <strong>Premiacion&nbsp;</strong>
                                     </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
@@ -356,8 +332,8 @@
                                 aria-labelledby="headingOne" data-parent="#accordion"
                                 data-bs-parent="#bootstrap-accordion_4">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-4"></p>
-                                    <p>Se premiaran a los 3 primeros equipos, los cuales se decidirán con base en
+                                    <p class="mbr-fonts-style panel-text display-4">
+                                        Se premiaran a los 3 primeros equipos, los cuales se decidirán con base en
                                         cantidad de problemas resueltos, penalty (envíos erróneos)&nbsp; y tiempo de
                                         resolución.<br>Los premios consistirán en:&nbsp;<br>• 1er&nbsp; lugar:&nbsp; 3
                                         unidades Monitor Gamer Curvo Samsung LC27F390FHL LED 27'', Full HD, FreeSync,
@@ -374,8 +350,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section data-bs-version="5.1" class="image2 cid-txT2t3C5Vr" id="image2-e">
 
@@ -427,7 +401,7 @@
                             <img src="assets/images/dah-564x392.webp" alt="Mobirise Website Builder">
                         </div>
                         <div class="item-content">
-                            <h5 class="item-title mbr-fonts-style display-7"><strong>DAH-minis</strong></h5>
+                            <h5 class="item-title mbr-fonts-style display-7"><strong>DAHminis</strong></h5>
 
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Espacios de información donde personas
                                 dedicadas al desarrollo de algoritmos y soluciones computacionales compartirán
@@ -527,16 +501,19 @@
                 <div class="item features-image сol-12 col-md-6 col-lg-3">
                     <div class="item-wrapper">
                         <div class="item-img">
-                            <img src="assets/images/sin-ttulo-646x632.webp" alt="Mobirise Website Builder">
+                            <img src="assets/images/fiexact-farmalivio-light-center-646x351.webp"
+                                alt="Mobirise Website Builder">
                         </div>
                         <div class="item-content">
                             <h5 class="item-title mbr-fonts-style display-7"><strong>Fiexact</strong></h5>
                             <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
                                 <em>01:00 pm - 02:00 pm</em>
                             </h6>
-                            <p class="mbr-text mbr-fonts-style mt-3 display-7">&nbsp;</p>
-                            <p>
-                                &nbsp;&nbsp;&nbsp;&nbsp;</p>
+                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Fiexact es un departamento de desarrollo
+                                de software dentro de Farmalivio. Uno de sus proyectos es el programa de lealtad
+                                Pastillero de Recompensas.&nbsp;<br></p>
+                            <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                &nbsp;&nbsp;</p>
                             <p></p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2"><a href="index.html#gallery3-f"
@@ -567,6 +544,24 @@
             </div>
         </div>
     </section>
+    <section data-bs-version="5.1" class="content4 cid-txLfBfi3NN" id="content4-b">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="title col-md-12 col-lg-10">
+                    <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">CAMINO AL IA CENTER
+                    </h4>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3393.5017912105277!2d-106.39587399999999!3d31.7295017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75c782207963b%3A0x9c5f7c4ec114285d!2sIA%20Center!5e0!3m2!1sen!2smx!4v1679939096568!5m2!1sen!2smx"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4"
+                            href="https://goo.gl/maps/PnexuTBRFRitTeQt5" target="_blank">¡Llévame!</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/parallax/jarallax.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
