--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                         un horario de 8:00 am a 10:00 am y cada integrante individualmente debera
                                         haberse regitrado previamente en el siguiente <a
                                             href="https://forms.gle/NaRJpG5fBDPm9kcH7" class="text-primary"
-                                            target="_blank"><em><strong>formulario</strong></em></a>.<br> Cada equipo deberá llevar su propia computadora, máximo 1 por equipo</p>
+                                            target="_blank"><em><strong>formulario</strong></em></a>.<br> Cada equipo deberá llevar su propia computadora, máximo 1 por equipo.</p>
                                 </div>
                             </div>
                         </div>
